registry/bad_registry_test.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: busybox-bad
spec:
  selector:
    matchLabels:
      app: busybox
  replicas: 1
  template:
    metadata:
      labels:
        app: busybox
    spec:
      containers:
        - name: busybox
          image: gcr.io/google-containers/busybox
          command:
            - sh
            - -c
            - sleep 1000000
      nodeSelector:
        kubernetes.io/os: Linux
